<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="@dimen/padding_list">
    
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_category_snippet"
        android:textSize="@dimen/article_list_title_ts"
        android:text="Test"
        android:hint="@string/default_title"
        android:padding="@dimen/article_list_padding"/>
     <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_author_snippet"
        android:layout_below="@+id/tv_category_snippet"
        android:textSize="@dimen/article_list_other_ts"
        android:text="Test"
        android:padding="@dimen/article_list_padding"
        android:hint="@string/default_author"/>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_date_snippet"
        android:layout_below="@+id/tv_author_snippet"
        android:text="Test"
        android:textSize="@dimen/article_list_other_ts"
        android:padding="@dimen/article_list_padding"
        android:hint="@string/default_date"/>
      

</RelativeLayout>
